GPOL-35 Fix card-feature spacing, add download count to offline card

--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -16,7 +16,7 @@ page-home {
       top: 60px;
       right: $gutter;
       position: absolute;
-      width: 350px;
+      width: 400px;
     }
   }
 
@@ -51,6 +51,7 @@ page-home {
       background-color: $mulberry;
       color: white;
       padding-bottom: 10px;
+      margin: 0;
 
       &:hover {
         background-color: darken($mulberry, 5);
