--- a/client/src/theme/components/_downloads.scss
+++ b/client/src/theme/components/_downloads.scss
@@ -1,14 +1,14 @@
 .download-count {
   border-radius: $radius / 2;
   background-color: $sky-blue;
-  position: absolute;
-  top: $gutter;
-  right: $gutter;
   font-size: $zeta;
   padding: 10px 10px 10px 38px;
+  margin-bottom: 10px;
   color: white;
   font-weight: bold;
   box-shadow: $shadow-small;
+  display: table;
+  position: relative;
 
   ion-icon {
     font-size: $gamma;
