--- a/client/src/theme/shared/_typography.scss
+++ b/client/src/theme/shared/_typography.scss
@@ -1,10 +1,2 @@
 $headings-font-weight: bold;
 $h5-font-size: $zeta;
-
-h3 {
-  font-weight: bold;
-}
-
-h5 {
-  font-weight: bold;
-}
